# routes/Product.js
@@ -1,5 +1,5 @@
 const express = require('express');
-const { createProduct, GetAllProduct, updateProduct, upload } = require('../controllers/Product');
+const { createProduct, GetAllProduct, updateProduct, getProductById, upload } = require('../controllers/Product');
 const router = express.Router();
 const verifyToken = require('../middlewares/VerifyToken'); // Middleware for token authentication
 const Authentication = require('../middlewares/Authentication'); //authentication for user
@@ -7,6 +7,7 @@ const Authentication = require('../middlewares/Authentication'); //authenticatio
 // Public Route (product)
 router.post('/addproduct', verifyToken, Authentication, upload.single('picture'), createProduct); //createProduct
 router.get('/getallproducts', verifyToken, Authentication, GetAllProduct); //createProduct
-router.put('/updateproduct', verifyToken, Authentication, updateProduct); //updateProduct
+router.put('/updateproduct', verifyToken, Authentication, upload.single('picture'), updateProduct); //updateProduct
+router.get('/getProductById/:productId', verifyToken, Authentication, getProductById); //getProductById
 
 module.exports = router;
